# arm_neon_array_processor

./: CMakeLists.txt  README.md  arm_neon_benchmark  arm_neon_processor.h  gui.cpp  main.cpp  setup_and_run.sh  test_neon
